--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,38 @@
-<div class="row justify-content-center">
-	<div class="col-4 mt-5 was-validated">
-	  <form [formGroup]="regForm" novalidate (ngSubmit)="submitForm($event,regForm.value)">
-		  <div class="mb-3">
-			<label for="name" class="form-label">User Name</label>
-			<input type="text" placeholder="User Name" class="form-control" id="name" formControlName="name" required/>
-			<div class="invalid-feedback" *ngIf="isSubmitted && formControls.name.errors?.required">
-			  Please provide a user name.
+<section class="login-block">
+	<div class="container login-wrapper">
+		<div class="row">
+			<div class="col-md-4 login-sec was-validated">
+				<h2 class="text-center" i18n="@@signIn">Sign In</h2>
+				<form [formGroup]="regForm" class="login-form" novalidate (ngSubmit)="submitForm($event,regForm.value)">
+					<div class="mb-3">
+						<label i18n="@@username" for="name" class="form-label text-uppercase">Username</label>
+						<input type="text" i18n-placeholder placeholder="User Name" class="form-control" id="name" formControlName="name" required/>
+						<div class="invalid-feedback" *ngIf="isSubmitted && formControls.name.errors?.required">
+							Please provide a user name.
+						</div>
+					</div>
+					<div class="mb-3">
+						<label i18n="@@password" for="password" class="form-label text-uppercase">Password</label>
+						<input type="password" i18n-placeholder placeholder="Password" id="password" class="form-control" formControlName="password" required/>
+						<div class="invalid-feedback" *ngIf="isSubmitted && formControls.password.errors?.required">
+							Please provide a password.
+						</div>
+					</div>
+					<div class="form-check">
+						<label class="form-check-label">
+							<input type="checkbox" class="form-check-input">
+								<small i18n="@@rememberMe">Remember Me</small>
+							</label>
+							<button type="submit" class="btn btn-login float-end" i18n="@@signIn">Sign in</button>
+						</div>
+					</form>
+				</div>
+				<div class="col-md-8 banner-sec">
+					<div class="banner-text">
+						<h2 i18n="@@welcome">Welcome</h2>
+						<p i18n="@@welcomeText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+					</div>
+				</div>
 			</div>
-		  </div>
-
-		  <div class="mb-3">
-			<label for="password" class="form-label">Password</label>
-			<input type="password" placeholder="Password" id="password" class="form-control" formControlName="password" required/>
-			<div class="invalid-feedback" *ngIf="isSubmitted && formControls.password.errors?.required">
-			  Please provide a password.
-			</div>
-		  </div>
-		  <div class="form-group">
-			<button type="submit" class="btn btn-primary">Sign in</button>
-		  </div>
-	  </form>
-	</div>
-</div>
+		</div>
+	</section>
